--- a/warofsix/main/static/style/battle.css
+++ b/warofsix/main/static/style/battle.css
@@ -42,3 +42,26 @@
 
 
 }
+
+
+
+.battle-group-container{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 50%;
+}
+
+.battle-grid-item{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    border: 2px dashed black;
+    padding: 3px;
+    background: lightpink;
+    flex-basis: calc(33.33% - 20px);
+    margin: 10px;
+    font-size: 0.6rem;
+}
