--- a/warofsix/main/static/style/main.css
+++ b/warofsix/main/static/style/main.css
@@ -246,6 +246,34 @@ a:visited{
     justify-content: center;
     /* align-content: baseline; */
     width: 30%;
+    min-width: 100%;
+    max-width: 460px;
+    column-gap: 5px;
+    row-gap: 5px;
+    flex-wrap: wrap;
+}
+
+
+.current-hero-container{
+    display: flex;
+    justify-content: center;
+    /* align-content: baseline; */
+    width: 30%;
+    min-width: 100%;
+    max-width: 460px;
+    column-gap: 5px;
+    row-gap: 5px;
+    flex-wrap: wrap;
+    padding: 5px;
+
+}
+
+.left-troop-bar{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-content: baseline; */
+    width: 30%;
     min-width: 250px;
     max-width: 460px;
     column-gap: 5px;
@@ -272,6 +300,40 @@ a:visited{
 
 }
 
+.current-reinforcement-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    background: #c8ee90;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 100px;
+    /* height: 130px; */
+    font-size: 0.8rem;
+
+}
+
+.current-hero-box{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-items: center;
+    background: #d95252bf;
+    border-radius: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 130px;
+    /* height: 130px; */
+    font-size: 0.8rem;
+    padding: 4px;
+
+}
+
+.hero-heading{
+    text-align: center;
+    font-weight: bold;
+    height: 40px;
+}
 
 .troop-management-container{
     display: flex;
