--- a/warofsix/encampment/templates/encampment/encampment.html
+++ b/warofsix/encampment/templates/encampment/encampment.html
@@ -81,7 +81,7 @@
               <div class="formation-row">
                 <div class="formation-item" id="31">
                   
-                    <select id="slcd31" name="troop31" class="troop-select" aria-label="Default select example">
+                    <select id="slcd-31" name="troop31" class="troop-select" aria-label="Default select example">
                       {% for troop in union_troops %}
                       <option id="{{troop.troop.id}}" value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop31 %} selected {% endif %} >{{troop.troop}}</option>
                       {% endfor %}
@@ -97,7 +97,7 @@
                 <div class="formation-item" id="32">
                      
                   
-                  <select id="slcd32" name="troop32" class="troop-select" aria-label="Default select example">
+                  <select id="slcd-32" name="troop32" class="troop-select" aria-label="Default select example">
                     {% for troop in union_troops %}
                     <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop32 %} selected {% endif %}>{{troop.troop}}</option>
                     {% endfor %}
@@ -113,7 +113,7 @@
                 <div class="formation-item"  id="33">
                   
 
-                  <select id="slcd33" name="troop33" class="troop-select" aria-label="Default select example">
+                  <select id="slcd-33" name="troop33" class="troop-select" aria-label="Default select example">
                     {% for troop in union_troops %}
                     <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop33 %} selected {% endif %}>{{troop.troop}}</option>
                     {% endfor %}
@@ -128,7 +128,7 @@
                 <div class="formation-item"  id="34">
                   
 
-                  <select id="slcd34" name="troop34" class="troop-select" aria-label="Default select example">
+                  <select id="slcd-34" name="troop34" class="troop-select" aria-label="Default select example">
                     {% for troop in union_troops %}
                     <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop34 %} selected {% endif %}>{{troop.troop}}</option>
                     {% endfor %}
@@ -145,7 +145,7 @@
               <div class="formation-row">
                 <div class="formation-item" id="21">
                   <b>21</b>
-                    <select id="slcd21" name="troop21" class="troop-select" aria-label="Default select example">
+                    <select id="slcd-21" name="troop21" class="troop-select" aria-label="Default select example">
                       {% for troop in union_troops %}
                       <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop21 %} selected {% endif %}>{{troop.troop}}</option>
                       {% endfor %}
@@ -160,7 +160,7 @@
                 <div class="formation-item" id="22">
                   <b>22</b>    
                   
-                  <select id="slcd22" name="troop22" class="troop-select" aria-label="Default select example">
+                  <select id="slcd-22" name="troop22" class="troop-select" aria-label="Default select example">
                     {% for troop in union_troops %}
                     <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop22 %} selected {% endif %}>{{troop.troop}}</option>
                     {% endfor %}
@@ -175,7 +175,7 @@
                 <div class="formation-item"  id="23">
                   <b>23</b>
 
-                  <select id="slcd23" name="troop23" class="troop-select" aria-label="Default select example">
+                  <select id="slcd-23" name="troop23" class="troop-select" aria-label="Default select example">
                     {% for troop in union_troops %}
                     <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop23 %} selected {% endif %}>{{troop.troop}}</option>
                     {% endfor %}
@@ -190,7 +190,7 @@
                 <div class="formation-item"  id="24">
                   <b>24</b>
 
-                  <select id="slcd24" name="troop24" class="troop-select" aria-label="Default select example">
+                  <select id="slcd-24" name="troop24" class="troop-select" aria-label="Default select example">
                     {% for troop in union_troops %}
                     <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop24 %} selected {% endif %}>{{troop.troop}}</option>
                     {% endfor %}
@@ -208,7 +208,7 @@
                 <div class="formation-row">
                   <div class="formation-item" id="11">
                     <b>11</b>
-                      <select id="slcd11" name="troop11" class="troop-select" aria-label="Default select example">
+                      <select id="slcd-11" name="troop11" class="troop-select" aria-label="Default select example">
                         {% for troop in union_troops %}
                         <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop11 %} selected {% endif %}>{{troop.troop}}</option>
                         {% endfor %}
@@ -223,7 +223,7 @@
                   <div class="formation-item" id="12">
                     <b>12</b>    
                     
-                    <select id="slcd12" name="troop12" class="troop-select" aria-label="Default select example">
+                    <select id="slcd-12" name="troop12" class="troop-select" aria-label="Default select example">
                       {% for troop in union_troops %}
                       <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop12 %} selected {% endif %}>{{troop.troop}}</option>
                       {% endfor %}
@@ -238,7 +238,7 @@
                   <div class="formation-item"  id="13">
                     <b>13</b>
           
-                    <select id="slcd13" name="troop13" class="troop-select" aria-label="Default select example">
+                    <select id="slcd-13" name="troop13" class="troop-select" aria-label="Default select example">
                       {% for troop in union_troops %}
                       <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop13 %} selected {% endif %}>{{troop.troop}}</option>
                       {% endfor %}
@@ -253,7 +253,7 @@
                   <div class="formation-item"  id="14">
                     <b>14</b>
           
-                    <select id="slcd14" name="troop14" class="troop-select" aria-label="Default select example">
+                    <select id="slcd-14" name="troop14" class="troop-select" aria-label="Default select example">
                       {% for troop in union_troops %}
                       <option value="{{troop.troop.id}}" {% if troop.troop.id == defensive_formation_data.troop14 %} selected {% endif %}>{{troop.troop}}</option>
                       {% endfor %}
@@ -298,9 +298,9 @@
               <div class="formation-row">
                 <div class="formation-item" id="11">
                   <b>11</b>
-                    <select id="slc11" name="troop11" class="troop-select" aria-label="Default select example">
+                    <select id="slc-11" name="troop11" class="troop-select" aria-label="Default select example">
                       {% for troop in user_counted_troops %}
-                      <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                      <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                       {% endfor %}
                     </select>
 
@@ -312,9 +312,9 @@
                 <div class="formation-item" id="12">
                   <b>12</b>    
                   
-                  <select id="slc12" name="troop12" class="troop-select" aria-label="Default select example">
+                  <select id="slc-12" name="troop12" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
 
@@ -326,9 +326,9 @@
                 <div class="formation-item"  id="13">
                   <b>13</b>
 
-                  <select id="slc13" name="troop13" class="troop-select" aria-label="Default select example">
+                  <select id="slc-13" name="troop13" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
                   
@@ -340,9 +340,9 @@
                 <div class="formation-item"  id="14">
                   <b>14</b>
 
-                  <select id="slc14" name="troop14" class="troop-select" aria-label="Default select example">
+                  <select id="slc-14" name="troop14" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
                   
@@ -356,9 +356,9 @@
               <div class="formation-row">
                 <div class="formation-item" id="21">
                   <b>21</b>
-                    <select id="slc21" name="troop21" class="troop-select" aria-label="Default select example">
+                    <select id="slc-21" name="troop21" class="troop-select" aria-label="Default select example">
                       {% for troop in user_counted_troops %}
-                      <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                      <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                       {% endfor %}
                     </select>
 
@@ -370,9 +370,9 @@
                 <div class="formation-item" id="22">
                   <b>22</b>    
                   
-                  <select id="slc22" name="troop22" class="troop-select" aria-label="Default select example">
+                  <select id="slc-22" name="troop22" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
 
@@ -384,9 +384,9 @@
                 <div class="formation-item"  id="23">
                   <b>23</b>
 
-                  <select id="slc23" name="troop23" class="troop-select" aria-label="Default select example">
+                  <select id="slc-23" name="troop23" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
                   
@@ -398,9 +398,9 @@
                 <div class="formation-item"  id="24">
                   <b>24</b>
 
-                  <select id="slc24" name="troop24" class="troop-select" aria-label="Default select example">
+                  <select id="slc-24" name="troop24" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
                   
@@ -414,9 +414,9 @@
               <div class="formation-row">
                 <div class="formation-item" id="31">
                   <b>31</b>
-                    <select id="slc31" name="troop31" class="troop-select" aria-label="Default select example">
+                    <select id="slc-31" name="troop31" class="troop-select" aria-label="Default select example">
                       {% for troop in user_counted_troops %}
-                      <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                      <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                       {% endfor %}
                     </select>
 
@@ -428,9 +428,9 @@
                 <div class="formation-item" id="32">
                   <b>32</b>    
                   
-                  <select id="slc32" name="troop32" class="troop-select" aria-label="Default select example">
+                  <select id="slc-32" name="troop32" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
 
@@ -442,9 +442,9 @@
                 <div class="formation-item"  id="33">
                   <b>33</b>
 
-                  <select id="slc33" name="troop33" class="troop-select" aria-label="Default select example">
+                  <select id="slc-33" name="troop33" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
                   
@@ -456,9 +456,9 @@
                 <div class="formation-item"  id="34">
                   <b>34</b>
 
-                  <select id="slc34" name="troop34" class="troop-select" aria-label="Default select example">
+                  <select id="slc-34" name="troop34" class="troop-select" aria-label="Default select example">
                     {% for troop in user_counted_troops %}
-                    <option value="{{troop.troop.id}}">{{troop.troop}}</option>
+                    <option id="{{troop.troop.id}}" value="{{troop.troop.id}}">{{troop.troop}}</option>
                     {% endfor %}
                   </select>
                   
@@ -558,31 +558,30 @@
 
 
 <script>
-      const selectImgPairs = document.querySelectorAll('[id^="slc"]');
+      const selectImgPairs = document.querySelectorAll('[id^="slc-"]');
       selectImgPairs.forEach(pair => {
-        const select = pair;
-        const img = document.querySelector(`#img${select.id.slice(3)}`);
-        
+        const imgd = document.querySelector(`#img${pair.id.slice(4)}`);
+
         // add event listener to select element
-        select.addEventListener('change', (event) => {
-          const selectedValue = event.target.value;
-          console.log("Attack çalıştı");
-          img.src = `{% get_static_prefix %}images/troops/${selectedValue}.png`;
+        pair.addEventListener('change', (event) => {
+          console.log('Attack çalıştı');
+          const selected = pair.querySelector(`option[value="${event.target.value}"]`);
+          const idd = selected.id
+          imgd.src = `{% get_static_prefix %}images/troops/${idd}.png`;
         });
       });
 </script>
 
 <script>
-      const selectImgPairsd = document.querySelectorAll('[id^="slcd"]');
+      const selectImgPairsd = document.querySelectorAll('[id^="slcd-"]');
       selectImgPairsd.forEach(pair => {
-        const selectd = pair;
-        const imgd = document.querySelector(`#imgd${selectd.id.slice(3)}`);
+        const imgd = document.querySelector(`#imgd${pair.id.slice(5)}`);
         
         // add event listener to select element
-        selectd.addEventListener('change', (event) => {
+        pair.addEventListener('change', (event) => {
           console.log('Defence çalıştı');
-          const selectedValued = document.querySelector('#selectd option[value="${event.target.value}"]');
-          const idd = selectedValued.id
+          const selected = pair.querySelector(`option[value="${event.target.value}"]`);
+          const idd = selected.id
           imgd.src = `{% get_static_prefix %}images/troops/${idd}.png`;
         });
       });
